# gluex-amplitude

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .taplo.toml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.binder/: postBuild
.github/: dependabot.yml
.github/workflows/: amptools.yml  ci.yml  docs.yml  lock.yml
binder/: requirements.txt
doc/: gluex-amplitude.ipynb
docs/: _config.yml  _toc.yml  conf.py  gluex-amplitude.ipynb  index.md  widget.ipynb
docs/fig/: eq-gluex-two-pseudoscalar.tex  feynman-gluex-two-pseudoscalar.tex  feynman-gluex-vector-meson.tex
script/: .gitignore  Makefile  README.md  data.root  draw_zlm.cc  fit_testAmpsAndAngles.cfg  makeComparison.py  print_amplitudes.cc  zlm.cfg
src/: README.md  Zlm.cc
src/AMPTOOLS_AMPS/: wignerD.cc
src/GlueXAmplitude/: Makefile
src/GlueXAmplitude/AMPTOOLS_AMPS/: README.md  ROOTDataReader.cc  ROOTDataReader.h  Zlm.cc  Zlm.h  wignerD.cc  wignerD.h
