[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = ["numpy", "pandas", "uproot"]
description = "Investigation of symbolic amplitude models for the GlueX experiment"
license = {text = "BSD 3-Clause License"}
name = "gluex-amplitude"
requires-python = ">=3.12"
version = "0.0.0"

[project.readme]
content-type = "text/markdown"
file = "README.md"

[dependency-groups]
dev = [
    "ruff",
    {include-group = "doc"},
    {include-group = "jupyter"},
    {include-group = "notebooks"},
]
doc = [
    "jupyter-book",
]
jupyter = [
    "jupyterlab",
    "jupyterlab-code-formatter",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "jupyterlab-myst",
    "python-lsp-ruff",
    "python-lsp-server[rope]",
]
notebooks = [
    "ampform",
    "ipympl",
    "ipywidgets",
    "matplotlib",
    "sympy",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = [
    "linux-64",
    "linux-aarch64",
    "osx-64",
    "osx-arm64",
]

[tool.pixi.dependencies]
clang = "*"
make = "*"
python = "3.12.*"
root = "*"

[tool.pixi.environments]
default = {features = ["dev"], solve-group = "main"}

[tool.pixi.pypi-dependencies]
gluex-amplitude = {path = ".", editable = true}

[tool.pixi.tasks.all]
depends-on = ["build", "doc", "style"]
description = "Run all continuous integration (CI) tasks locally"

[tool.pixi.tasks.build]
cmd = 'make SHELL=/bin/bash'
description = "Build C++ project"

[tool.pixi.tasks.build.env]
CXX = "clang"
CXXFLAGS = "-std=c++20 -O3 -Wno-"

[tool.pixi.tasks.doc]
cmd = "jupyter book build docs --warningiserror"
description = "Build website"

[tool.pixi.tasks.lab]
cmd = "jupyter lab docs"
description = "Start Jupyter Lab"

[tool.pixi.tasks.style]
cmd = "pre-commit run --all-files"
description = "Perform all linting, formatting, and spelling checks"

[tool.ruff]
extend-include = ["*.ipynb"]
preview = true
show-fixes = true
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLW1514",
    "PT001",
    "PTH",
    "SIM108",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-self]
ignore-names = [
    "_global_settings",
    "_latex",
    "_print",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "ANN",
    "B018",
    "C408",
    "C90",
    "D",
    "E303",
    "E703",
    "E741",
    "N803",
    "N806",
    "N816",
    "PLR09",
    "PLR2004",
    "PLW0602",
    "PLW0603",
    "RUF001",
    "S101",
    "T20",
    "TC00",
]
"**/widget.ipynb" = ["ARG001", "ARG002", "S307"]
"docs/*" = [
    "INP001",
    "S101",
    "S113",
]
"script/*" = ["D100", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
